cmake_minimum_required(VERSION 3.20)
project(DataStruct C)

set(CMAKE_C_STANDARD 99)


add_executable(chapter01_test chapter01/LinkList.c)
add_executable(chapter02_test chapter02/SeqStack.c)
add_executable(chapter03_test chapter03/LinkStack.c)
add_executable(chapter04_test chapter04/SeqQueue.c)
add_executable(chapter05_test chapter05/LinkQue.c)
add_executable(chapter06_test chapter06/NodeTest.c)
